<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    tools:context=".SearchFeaturedTicketsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/grey3_input_shape"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/back_IV"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:contentDescription="@null"
            android:src="@drawable/arrow_back_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical">


            <TextView
                android:id="@+id/departure_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:background="@null"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:singleLine="true"
                android:text="@string/Minsk"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/swap_icon"
                app:drawableTint="@color/white" />


            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginVertical="8dp"
                android:background="@color/grey4" />


            <TextView
                android:id="@+id/arrival_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:drawablePadding="10dp"
                android:fontFamily="@font/sf_pro_display_semibold"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/cross_icon"
                app:drawableTint="@color/grey6"
                tools:text="Сочи" />

        </LinearLayout>

    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="33dp"
        android:layout_marginTop="13dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/back_ticket_chip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/chip_background"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="2dp"
                    android:src="@drawable/plus_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/backwards"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/date_chip"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/chip_background"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/day_month_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:text="24 фев," />

                <TextView
                    android:id="@+id/day_off_week_TV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:textColor="@color/grey6"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    tools:text="сб" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/chip_background"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_marginStart="9dp"
                    android:src="@drawable/menu_profile_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/economy"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@drawable/chip_background"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginStart="9dp"
                    android:src="@drawable/filter_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginBottom="2dp"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:text="@string/filters"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="italic" />
            </LinearLayout>

        </LinearLayout>

    </HorizontalScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_16dp_grey1"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        tools:layout_height="288dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:text="@string/direct_flights"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/flight_preview_item" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="6dp"
            android:clickable="true"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:gravity="center"
            android:text="@string/show_all"
            android:textAlignment="center"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:visibility="gone" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/rounded_8dp_blue"
        android:clickable="true"
        android:fontFamily="@font/sf_pro_display_semibold"
        android:gravity="center"
        android:text="@string/see_all_tickets"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_8dp_grey1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@null"
            android:src="@drawable/menu_bell_icon"
            app:tint="@color/blue" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:text="@string/subscribe_for_price"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


</LinearLayout>