<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/standard_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="23dp"
    android:background="@drawable/rounded_corners_top_16_dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".presentation.BottomSheetSearch">

    <View
        android:layout_width="38dp"
        android:layout_height="5dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/drag_handle_shape" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/grey3_input_shape"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:id="@+id/departure_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:background="@null"
            android:drawablePadding="10dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:singleLine="true"
            android:text="@string/Minsk"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/plane_take_off_icon"
            app:drawableTint="@color/grey5" />


        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginVertical="8dp"
            android:background="@color/grey4" />


        <EditText
            android:id="@+id/arrival_ET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:digits="АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯабвгдеёжзийклмнопрстуфхцчшщъыьэюя"
            android:drawableEnd="@drawable/cross_icon"
            android:drawablePadding="14.5dp"
            android:fontFamily="@font/sf_pro_display_semibold"
            android:hint="@string/where_turkey"
            android:inputType="text"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/grey6"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/search_icon"
            app:drawableTint="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/complex_route"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="11dp"
                android:background="@drawable/green_rounded_corners_shape_8dp"
                android:contentDescription="@null"
                android:padding="12dp"
                android:src="@drawable/complex_route_icon" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/complex_route"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/anywhere"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="11dp"
                android:background="@drawable/blue_rounded_corners_shape_8dp"
                android:contentDescription="@null"
                android:padding="12dp"
                android:src="@drawable/anywhere_icon" />

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/anywhere"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/day_offs"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="11dp"
                android:background="@drawable/dark_blue_rounded_corners_shape_8dp"
                android:contentDescription="@null"
                android:padding="12dp"
                android:src="@drawable/day_off_icon" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/day_offs"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/last_minute_tickets"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginHorizontal="11dp"
                android:background="@drawable/red_rounded_corners_shape_8dp"
                android:contentDescription="@null"
                android:gravity="center"
                android:padding="12dp"
                android:src="@drawable/fire_icon" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/sf_pro_display_regular"
                android:text="@string/last_minute_tickets"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="243dp"
        android:background="@drawable/grey3_input_shape"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingHorizontal="16dp">


        <LinearLayout
            android:id="@+id/istanbul_LL"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/stambul_image"
                app:shapeAppearanceOverlay="@style/roundedImageView8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/istanbul_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@null"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:singleLine="true"
                    android:text="@string/istanbul"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@null"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:hint="@string/popular_direction"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey5"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:background="@color/grey4" />

        <LinearLayout
            android:id="@+id/sochi_LL"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/sochi_image"
                app:shapeAppearanceOverlay="@style/roundedImageView8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/sochi_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@null"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:singleLine="true"
                    android:text="@string/sochi"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@null"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:hint="@string/popular_direction"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey5"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="8dp"
            android:background="@color/grey4" />

        <LinearLayout
            android:id="@+id/phuket_LL"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal">

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/phuket_image"
                app:shapeAppearanceOverlay="@style/roundedImageView8dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/phuket_TV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:background="@null"
                    android:fontFamily="@font/sf_pro_display_semibold"
                    android:singleLine="true"
                    android:text="@string/phuket"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@null"
                    android:fontFamily="@font/sf_pro_display_regular"
                    android:hint="@string/popular_direction"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/grey5"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/grey4" />


    </LinearLayout>


</LinearLayout>